# conflit_warehouse

./: .gitignore  .gitkeep  .pre-commit-config.yaml  README.md  main.py  makefile  pyproject.toml
data/raw/: 522bbd98-1c9e-4e83-86b0-33e016444681.csv  OECD.DCD.FSD,DSD_DAC2@DF_DAC2A,+9PRIV0+DACEU_EC+DACEU+DAC_EC+G7+ALLD.ALLR+DPGC.296+286+106+255+250+209+211+213+216+207+240+206.USD.Q.csv  footnotes.csv  persons_of_concern.csv
docs/: decisions.md
notebooks/: exploration.ipynb
schemas/: refugees_stack.yaml
schemas/gold/: refugees_stack_yearly.yaml
schemas/silver/: refugees_stack.yaml
src/bronze/: dq.py  snapshot_maker.py
src/core/: config.py  dataclasses.py  dq.py  hasing.py  iso.py  json.py  lineage.py  log.py  metrics.py  miscelannious.py  sql.py  time.py  types.py  write_partition.py
src/core/dq/: bronze_policy.py  dq.py
src/core/lineage/: emitters.py  model.py
src/core/sql/: quote.py
src/diff/: canon.yaml  canonilaze.py  diff_cli.py  discovery.py  harmonizer.py  parser.py  planner.py  router.py  router.yaml  utils.py
src/gold/: build_cli.py  metrics.yml  processor_gold.py
src/infra/duckdb/: inspect.py  io.py  parquet.py
src/infra/yaml_sql/: sql_yaml_reader.py
src/others/: ddls.py  load_dim_country.py
src/silver/: canonilaze.py  discovery.py  harmonizer.py  processor.py  upsert_cli.py
