[project]
name = "conflit-warehouse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.3.2",
    "ipykernel>=6.30.1",
    "jupysql>=0.11.1",
    "pandas>=2.3.2",
    "pip>=25.2",
    "pre-commit>=4.3.0",
    "pydantic-settings>=2.10.1",
    "pytest>=8.4.1",
    "ruff>=0.12.10",
    "structlog>=25.4.0",
    "toml>=0.10.2",
    "typer>=0.16.1",
]
